# trueno-db

./: .cargo-mutants.toml  .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  Makefile  PROGRESS.md  README.md  RED_TEAM_AUDIT.md  RELEASE_CHECKLIST_0.1.0.md  STATUS.md  build.rs  deny.toml  justfile  mutation_log.txt  renacer.toml
.cargo/: config.toml
.github/workflows/: book.yml  ci.yml  nightly.yml  release.yml  release.yml.disabled
benches/: aggregations.rs  backend_comparison.rs  competitive_benchmarks.rs  kernel_fusion.rs  pcie_analysis.rs  sql_query_benchmarks.rs  storage_benchmarks.rs
benchmarks/: RESULTS.md  pcie_analysis.md
book/: README.md  book.toml  create_placeholders.sh
book/src/: SUMMARY.md  introduction.md
book/src/academic/: bress-2014.md  funke-2018.md  gregg-2011.md  leis-2014.md  neumann-2011.md  research-papers.md  wu-2012.md
book/src/appendix/: api-docs.md  glossary.md  license.md  references.md
book/src/architecture/: cost-based-backend.md  design-principles.md  heterogeneous-computing.md  out-of-core-execution.md  system-overview.md
book/src/case-studies/: core-001.md  core-002.md  integration-pipeline.md  proptest-morsels.md
book/src/components/dispatcher/: 5x-rule.md  cost-model.md  performance.md  selection-algorithm.md
book/src/components/experiment/: schema.md
book/src/components/gpu/: aggregations.md  hash-join.md  memory-management.md  parallel-reduction.md
book/src/components/kv/: compression.md  hash-functions.md  overview.md  pforge-integration.md
book/src/components/query/: jit-compiler.md  kernel-fusion.md  operator-variants.md  sql-interface.md
book/src/components/simd/: cpu-optimization.md  simd-primitives.md  trueno-integration.md
book/src/components/storage/: arrow-backend.md  gpu-transfer-queue.md  morsel-driven.md  parquet-integration.md
book/src/dev/: building.md  contributing.md  examples.md  getting-started.md  roadmap.md  running-tests.md
book/src/milestones/: phase1-mvp.md
book/src/performance/: backend-comparison.md  benchmarking.md  competitive-benchmarks.md  gpu-syscall-tracing.md  optimization.md  scalability.md  storage-results.md  syscall-analysis.md
book/src/quality/: ci.md  clippy.md  code-coverage.md  mutation-testing.md  tdg-score.md
book/src/tdd/: backend-equivalence.md  integration-testing.md  property-based-testing.md  red-green-refactor.md  test-first.md
book/src/toyota/: genchi-genbutsu.md  heijunka.md  jidoka.md  kaizen.md  muda.md  poka-yoke.md
book/src/troubleshooting/: common-issues.md  debugging.md  gpu-setup.md  performance-debugging.md  webgpu-browser.md
contracts/: batch-query-v1.yaml
contracts/.pv/cache/lint/: 351bd39dcb4bddf9.json  6be2883d4685f423.json  f09cb1124da9c8cc.json
docs/: PHASE1_COMPLETE.md  TICKETS.md
docs/roadmaps/: roadmap-original.yaml  roadmap.yaml
docs/specifications/: CORE-001-arrow-storage.md  PHASE4-COMPLETION-SUMMARY.md  PHASE4-WASM-TOC.md  db-spec-v1.md  http-range-parquet-spec.md  sovereign-ai-capability-spec.md
docs/tickets/: RELEASE-001-remaining-work.md
examples/: README.md  backend_selection.rs  basic_usage.rs  benchmark_shootout.rs  complete_pipeline.rs  compressed_kv.rs  experiment_tracking.rs  gaming_leaderboards.rs  gpu_aggregations.rs  gpu_sales_analytics.rs  kv_store.rs  market_crashes.rs  simd_acceleration.rs  sql_query_interface.rs  topk_selection.rs
golden_traces/: ANALYSIS.md  basic_usage.json  basic_usage_source.json  basic_usage_summary.txt  simd_acceleration.json  simd_acceleration_summary.txt  sql_query_interface.json  sql_query_interface_summary.txt
scripts/: capture_golden_traces.sh
src/: error.rs  generated_contracts.rs  lib.rs  main.rs  topk.rs  verification_specs.rs  wasm.rs
src/backend/: mod.rs
src/experiment/: artifact_record.rs  experiment_record.rs  metric_record.rs  mod.rs  run_record.rs  store.rs
src/gpu/: jit.rs  kernels.rs  mod.rs  multigpu.rs
src/kv/: compressed.rs  memory.rs  mod.rs
src/query/: executor.rs  mod.rs
src/storage/: mod.rs
src/wasm/: http_range.rs  late_materialization.rs  streaming_parquet.rs
tests/: backend_equivalence_tests.proptest-regressions  backend_equivalence_tests.rs  backend_selection_test.rs  backend_story.rs  error_test.rs  experiment_schema_test.rs  integration_test.rs  lib_test.rs  oom_prevention_test.rs  property_tests.rs  query_executor_coverage_tests.rs  query_integration_tests.rs  query_test.rs
wasm-pkg/: .gitignore  Cargo.toml  README.md  index.html  package.json  playwright.config.ts
wasm-pkg/e2e/: demo.spec.ts
wasm-pkg/src/: lib.rs
