[package]
name = "trueno-db"
version = "0.1.0"
edition = "2021"
authors = ["Pragmatic AI Labs <info@paiml.com>"]
license = "MIT"
description = "GPU-first embedded analytics database with SIMD fallback"
repository = "https://github.com/paiml/trueno-db"
keywords = ["database", "gpu", "simd", "analytics", "wasm"]
categories = ["database", "science", "wasm"]
rust-version = "1.75"

[dependencies]
# Core compute (SIMD - always included)
trueno = "0.4.0"  # SIMD fallback (AVX-512/AVX2/SSE2)

# GPU compute (optional - feature-gated to avoid +3.8MB binary bloat)
wgpu = { version = "22", optional = true }  # GPU compute (Vulkan/Metal/DX12/WebGPU)

# Storage (Arrow columnar format)
arrow = "53"               # Columnar format
parquet = "53"             # Parquet reader

# Query parsing
sqlparser = "0.52"         # SQL parsing

# Async runtime
tokio = { version = "1", features = ["full"] }
rayon = "1.8"              # CPU parallelism (for spawn_blocking isolation)

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"           # Property-based testing
quickcheck = "1"           # Property-based testing (backend equivalence)
rand = "0.8"               # Random data generation for examples

# Coverage
cargo-llvm-cov = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM support
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Gpu", "GpuDevice"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies (Phase 3: gRPC distribution)
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }

[features]
# Default: SIMD-only (fast compile, small binary)
# See: ../paiml-mcp-agent-toolkit/docs/specifications/trueno-db-integration-review-response.md
default = ["simd"]

# SIMD-only backend (12 dependencies, -0.4 MB vs SQLite, 18s compile)
simd = []

# GPU backend (95 dependencies, +3.8 MB, 63s compile) - opt-in only
gpu = ["dep:wgpu"]

# Phase 3: Distributed multi-GPU
distributed = ["tonic", "prost"]

# Phase 4: WASM build
wasm = []

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "aggregations"
harness = false

[[bench]]
name = "backend_comparison"
harness = false

[profile.test]
# Optimizations for faster test execution (certeza formula)
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false  # Keep symbols for profiling

[profile.bench]
inherits = "release"

# Toyota Way: Enforce quality gates in development
[package.metadata.pmat]
quality_gates = true
tdg_score_minimum = 85  # B+ grade minimum
mutation_testing = true
mutation_kill_rate_minimum = 85  # 85% kill rate (certeza formula)
coverage_minimum = 85  # 85% code coverage (certeza minimum, target 95%)
